// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PreviewFooter Component renders as expected with requiredProps 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviewFooter
    onRefresh={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Styled(FooterTab)
          onLayout={[Function]}
        >
          <Styled(Button)>
            <Styled(Icon)
              name="menu"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="refresh"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)>
            <Styled(Icon)
              name="add"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onLayout={[Function]}
            onLongPress={[Function]}
            onPress={[Function]}
          >
            <Styled(Icon)
              name="sort-descending"
              type="MaterialCommunityIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="library-books"
              type="MaterialIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
      ],
      "style": Object {
        "zIndex": 1,
      },
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)>
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>,
            <Styled(Button)>
              <Styled(Icon)
                name="add"
                type="MaterialIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>,
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />
            </Styled(Button)>,
          ],
          "onLayout": [Function],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "menu",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />,
              "onPress": [Function],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "refresh",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="add"
                type="MaterialIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "add",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />,
              "onLayout": [Function],
              "onLongPress": [Function],
              "onPress": [Function],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "sort-descending",
                "type": "MaterialCommunityIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />,
              "onPress": [Function],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "library-books",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Styled(FooterTab)
            onLayout={[Function]}
          >
            <Styled(Button)>
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="refresh"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)>
              <Styled(Icon)
                name="add"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onLayout={[Function]}
              onLongPress={[Function]}
              onPress={[Function]}
            >
              <Styled(Icon)
                name="sort-descending"
                type="MaterialCommunityIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>,
        ],
        "style": Object {
          "zIndex": 1,
        },
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Button)>
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)>
                <Styled(Icon)
                  name="add"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onLayout={[Function]}
                onLongPress={[Function]}
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />
              </Styled(Button)>,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="library-books"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
            ],
            "onLayout": [Function],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "menu",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="refresh"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "refresh",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="add"
                  type="MaterialIcons"
                />,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "add",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="sort-descending"
                  type="MaterialCommunityIcons"
                />,
                "onLayout": [Function],
                "onLongPress": [Function],
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "sort-descending",
                  "type": "MaterialCommunityIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="library-books"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "library-books",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Testing PreviewFooter Component renders in muted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PreviewFooter
    muted={true}
    onRefresh={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Styled(FooterTab)
          onLayout={[Function]}
        >
          <Styled(Button)>
            <Styled(Icon)
              name="menu"
              type="MaterialIcons"
            />
          </Styled(Button)>
          <Styled(Button)
            onPress={[Function]}
          >
            <Styled(Icon)
              name="library-books"
              type="MaterialIcons"
            />
          </Styled(Button)>
        </Styled(FooterTab)>,
      ],
      "style": Object {
        "zIndex": 1,
      },
      "virtual": undefined,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Styled(Button)>
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>,
            false,
            false,
            false,
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />
            </Styled(Button)>,
          ],
          "onLayout": [Function],
          "virtual": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />,
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "menu",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          false,
          false,
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />,
              "onPress": [Function],
              "virtual": undefined,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "name": "library-books",
                "type": "MaterialIcons",
                "virtual": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Styled(FooterTab)
            onLayout={[Function]}
          >
            <Styled(Button)>
              <Styled(Icon)
                name="menu"
                type="MaterialIcons"
              />
            </Styled(Button)>
            <Styled(Button)
              onPress={[Function]}
            >
              <Styled(Icon)
                name="library-books"
                type="MaterialIcons"
              />
            </Styled(Button)>
          </Styled(FooterTab)>,
        ],
        "style": Object {
          "zIndex": 1,
        },
        "virtual": undefined,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Styled(Button)>
                <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
              false,
              false,
              false,
              <Styled(Button)
                onPress={[Function]}
              >
                <Styled(Icon)
                  name="library-books"
                  type="MaterialIcons"
                />
              </Styled(Button)>,
            ],
            "onLayout": [Function],
            "virtual": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="menu"
                  type="MaterialIcons"
                />,
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "menu",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            false,
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Styled(Icon)
                  name="library-books"
                  type="MaterialIcons"
                />,
                "onPress": [Function],
                "virtual": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "name": "library-books",
                  "type": "MaterialIcons",
                  "virtual": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
